--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "swagger": "node ./src/config/swagger.js"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
   }
 }
